fin de design sur la premiere page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <br>Reprise des cours en Septembre.
                     <br>Inscription possible toute l'année!
                 </span>
-            <button type="button" class="btn btn-link text-black  btn-light btn-lg cursor-pointer">JE M'INSCRIS</button>
+            <button type="button" class="btn text-black btn-light btn-lg cursor-pointer">JE M'INSCRIS</button>
         </div>
                         <!--je cree mon aside avec coordonnées et iframe-->
      <aside class="container" id="aside">
