rezising navbar bootstrap

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         
                                  <!--navbar-->
-        <nav class="navbar bg-dark navbar-dark  navbar-expand-md  fixed-top">
+        <nav class="navbar bg-dark navbar-dark  navbar-expand-sm ">
             <div class="container-fluid">
                 <img src="img\bow-295101_1280.webp" alt="logo" width="150" height="100"class="navbar-brand"></a>
                 </img>
@@ -76,7 +76,7 @@
                     <input type="email" name="email" placeholder="E-mail" required>
                     <input type="text"  name="number" placeholder="06---------" required><br>
                     <textarea name="message" placeholder="Laissez votre message"></textarea><br>
-                    <a href="notre_equipe.html">Envoyer</a>
+                    <a href="#">Envoyer</a>
                 </form>
                         <!--ombres-->
                     <div class="drop drop-1"></div>
