add medai queries for 900

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         
                                  <!--navbar-->
-        <nav class="navbar bg-dark navbar-dark  navbar-expand-lg flex-sm-column ">
+        <nav class="navbar bg-dark navbar-dark  navbar-expand-xl flex-md-column ">
             <div class="container-fluid">
                 <img src="img\bow-295101_1280.webp" alt="logo" width="15%" height="100"class="navbar-brand"></a>
                 </img>
@@ -227,7 +227,7 @@
         </article>
     </main>
                                                     <!--FOOTER-->
-    <footer class="bg-dark text-white flex-sm-column"> 
+    <footer class="bg-dark text-white flex-md-column"> 
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
                         <div class="col-md-3 col-mg-3 col-xl-3 mx-auto mt-3">
