--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
                         <!--je cree mon aside avec coordonnées et iframe-->
      <aside class="container" id="aside">
-            <iframe src="https://www.youtube.com/embed/-aUxXzV_Twg" title="YouTube video player" width="90%" height="200" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/-aUxXzV_Twg" title="YouTube video player" width="100%" height="200" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                        <!--formulaire de contact-->
     
             <div class="contact">
@@ -225,6 +225,10 @@
                      </p>                     
                  </div>
         </article>
+        <!-- <button type="button" class="btn btn-primary rounded-3" id="scrollToTop" style="display: none;">
+            <i class="bi bi-arrow-up-short display-5 fw-bold"></i>
+        </button> -->
+
     </main>
                                                     <!--FOOTER-->
     <footer class="bg-dark text-white flex-md-column"> 
