finish first page

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <input type="text"  name="name" placeholder="Nom" required>
                     <input type="text"  name="surname" placeholder="Prénom"required>
                     <input type="email" name="email" placeholder="E-mail" required>
-                    <input type="text"  name="number" placeholder="06---------" required><br>
-                    <textarea name="message" placeholder="Laissez votre message"></textarea><br>
+                    <input type="text"  name="number" placeholder="06---------" required>
+                    <textarea name="message" placeholder="Laissez votre message"></textarea>
                     <a href="#">Envoyer</a>
                 </form>
                         <!--ombres-->
