--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="npm i bootstrap-icons">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" href="styles/design.css">
     <title>JUDO CLUB DE PARIS</title>
 </head>
 <body class="container" id="index">
@@ -29,13 +29,6 @@
                         <li class="nav-item" id="activites"> 
                             <a class="nav-link" href="activites.html">ACTIVITES</a> 
                         </li>
-                            <!--fin du dropdown-->
-                                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="notre_equipe.html">NOTRE EQUIPE</a>
-                        </li>
-                    </ul>
-                </div>
             </div> 
         </nav>
     </header>
