--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="npm i bootstrap-icons">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles/design.css">
+    <link rel="stylesheet" href="design.css">
     <title>JUDO CLUB DE PARIS</title>
 </head>
 <body class="container" id="index">
@@ -39,7 +39,7 @@
   
         <div class="accueil">
             <h1>JUDO<br>CLUB DE PARIS</h1>
-                <span>Suivez notre actualité avec Facebook et Instagram.
+                  <span>Suivez notre actualité avec Facebook et Instagram.
                     <br>Reprise des cours en Septembre.
                     <br>Inscription possible toute l'année!
                 </span>
